web socket based feedback communication, partial commit

--- a/kooplexhub/container/templates/container_layout.html
+++ b/kooplexhub/container/templates/container_layout.html
@@ -9,23 +9,43 @@
   {% include 'containerhelp.html' %}
 {% endblock %}
 
+
+<script>
+  var hidden = false;
+  function action() {
+      hidden = !hidden;
+      if(hidden) {
+          document.getElementById('togglee').style.visibility = 'hidden';
+      } else {
+          document.getElementById('togglee').style.visibility = 'visible';
+      }
+  }
+</script>
+
 {% block submenu %}
 <ul class="navbar-nav flex-row flex-md-row">
   <li class="ms-3 nav-item text-center">
-    <a data-toggle="tooltip" title="New environment" data-placement="bottom" class="nav-link {% if submenu == 'new' %}active active border-2 border-bottom{% endif %}" href="{% url 'container:new' %}"><i class="bi bi-basket3"></i><span class="d-none d-sm-block">&nbsp;New environment</span></a>
+    <a data-toggle="tooltip" title="New environment" data-placement="bottom" class="nav-link {% if submenu == 'new' %}active active border-2 border-bottom{% endif %}" href="{% url 'container:new' %}"><i class="bi bi-basket3"></i><span class="d-none d-md-block">&nbsp;New environment</span></a>
   </li>
   <li class="ms-3 nav-item text-center">
-    <a data-toggle="tooltip" title="List environment" data-placement="bottom" class="nav-link {% if submenu == 'list' %}active active border-2 border-bottom{% endif %}" href="{% url 'container:list' %}"><i class="bi bi-bag-dash"></i><span class="d-none d-sm-block">&nbsp;List environment</span></a>
+    <a data-toggle="tooltip" title="List environment" data-placement="bottom" class="nav-link {% if submenu == 'list' %}active active border-2 border-bottom{% endif %}" href="{% url 'container:list' %}"><i class="bi bi-bag-dash"></i><span class="d-none d-md-block">&nbsp;List environment</span></a>
   </li>
   <li class="ms-3 nav-item text-center">
-    <a data-toggle="tooltip" title="List report environment" data-placement="bottom" class="nav-link {% if submenu == 'reportclist' %}active active border-2 border-bottom{% endif %}" href="{% url 'container:reportclist' %}"><i class="bi bi-bag-dash"></i><span class="d-none d-sm-block">&nbsp;List report environment</span></a>
+    <a data-toggle="tooltip" title="List report environment" data-placement="bottom" class="nav-link {% if submenu == 'reportclist' %}active active border-2 border-bottom{% endif %}" href="{% url 'container:reportclist' %}"><i class="bi bi-bag-dash"></i><span class="d-none d-md-block">&nbsp;List report environment</span></a>
   </li>
 </ul>
 {% endblock %}
 
 {% block bodycontent %}
-<div class="container mt-4">
-{% block realcontent %}
+<div class="m-2" style="height: calc(100vh - 105px); overflow-y: scroll; overflow-x:hidden;">
+  <div class="container" style="display:none;" id="myAlert">
+    <div class="alert alert-warning alert-dismissable" id="myAlert2">
+      <button type="button" class="btn-close" data-bs-dismiss="alert" aria-label="Close"></button>
+      Dear Kooplex users! We are interested in your opinion about Kooplex in order to improve our platform. Our team would appreciate if you could have five minutes to answer this quick and anonymous questionnaire by <a href="https://forms.gle/cJ52qSQNN8kUKXpL9" target="_blank" class="alert-link" id="toggler" value="Toggler" onClick="action();">clicking here</a>. Thank you!
+    </div>
+    </div>
+<div  class="m-2" style="height: calc(100vh - 105px); overflow-y: scroll; overflow-x:hidden;">
+    {% block realcontent %}
   <div class="card shadow p-3 mb-2 mt-3 bg-light rounded"> 
     <h6 class="card-title">Nothing interesting</h6>
     <p>Lorem ipsum dolor sit amet, consectetur adipiscing elit, sed do eiusmod tempor incididunt ut labore et dolore magna aliqua. Ut enim ad minim veniam, quis nostrud exercitation ullamco laboris nisi ut aliquip ex ea commodo consequat. Duis aute irure dolor in reprehenderit in voluptate velit esse cillum dolore eu fugiat nulla pariatur. Excepteur sint occaecat cupidatat non proident, sunt in culpa qui officia deserunt mollit anim id est laborum</p>
