--- a/kooplexhub/container/templates/container_partial_list.html
+++ b/kooplexhub/container/templates/container_partial_list.html
@@ -27,7 +27,6 @@
       </p>
     <p class="card-text">
       {% container_restart_reason container %}
-      {# FIXME: render part of it, if there is room % container_last_message container % #}
     </p>
   </div>
   <div class="card-footer bg-secondary bg-opacity-35 border-bottom border-warning border-1 border-opacity-50i d-none" id="buttonbar-{{ container.id }}">
@@ -41,7 +40,7 @@
           <div class="ms-2">{% button_configure container %}</div>
         </div>
         <div class="d-flex flex-row justify-content-end">
-          <div>{% button_delete_container container next_page="container:list" %}</div> {# FIXME: no need for the next_page here #}
+          <div>{% button_delete_container container %}</div>
         </div>
       </div>
     </div>
